Fix page text-align and notes

--- a/responsive_web_design_certification/module_3/4_certification_program_(technical_documentation_page)/css/styles.css
+++ b/responsive_web_design_certification/module_3/4_certification_program_(technical_documentation_page)/css/styles.css
@@ -75,6 +75,7 @@ h1 {
 
 p {
     font-size: 0.9rem;
+    text-align: justify;
 }
 
 a {
